Added error handling for the Unicode conversion for message quote, bug 132613, r=ducarroz, sr=bienvenu.